log
Thu 20 Apr 2023 11:48:48 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:5: error: ‘new’ undeclared (first use in this function)
   42 |     new->lower_than = lower_than;
      |     ^~~
treemap.c:42:5: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:41:12: error: unused variable ‘tree’ [-Werror=unused-variable]
   41 |   TreeMap *tree=
      |            ^~~~
cc1: all warnings being treated as errors
Compilation failed
ed4ea17
Thu 20 Apr 2023 11:48:51 PM UTC: 
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:5: error: ‘new’ undeclared (first use in this function)
   42 |     new->lower_than = lower_than;
      |     ^~~
treemap.c:42:5: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:41:12: error: unused variable ‘tree’ [-Werror=unused-variable]
   41 |   TreeMap *tree=
      |            ^~~~
cc1: all warnings being treated as errors
Compilation failed
90de45d
Thu 20 Apr 2023 11:52:51 PM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
5ed663c
Thu 20 Apr 2023 11:53:16 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
c150b74
Thu 20 Apr 2023 11:53:25 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
0b56735
Fri 21 Apr 2023 12:07:45 AM UTC: 
 treemap.c | 25 ++++++++++++++++++++++---
 1 file changed, 22 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:95:10: error: ‘pair’ undeclared (first use in this function); did you mean ‘Pair’?
   95 |   return pair;
      |          ^~~~
      |          Pair
treemap.c:95:10: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
68f7c15
Fri 21 Apr 2023 12:07:52 AM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
66b4612
Fri 21 Apr 2023 12:08:35 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
b3dbaf0
Fri 21 Apr 2023 12:23:09 AM UTC: 
 treemap.c | 37 +++++++++++++++++++++++++++++++++++++
 1 file changed, 37 insertions(+)
 tests:  12|6
total_score: 15/70
c5d6a5e
Fri 21 Apr 2023 12:25:21 AM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  13|5
total_score: 25/70
ba6a402
Fri 21 Apr 2023 12:28:47 AM UTC: 
 treemap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  15|4
total_score: 25/70
6ad2989
Fri 21 Apr 2023 12:29:21 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  13|5
total_score: 25/70
d89468b
Fri 21 Apr 2023 12:29:54 AM UTC: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  15|4
total_score: 25/70
620c525
Fri 21 Apr 2023 12:48:36 AM UTC: 
 treemap.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
 tests:  15|4
total_score: 25/70
efee4cb
Fri 21 Apr 2023 12:51:52 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:106:15: error: unused variable ‘padre’ [-Werror=unused-variable]
  106 |     TreeNode *padre=node->parent;
      |               ^~~~~
cc1: all warnings being treated as errors
Compilation failed
0887b27
Fri 21 Apr 2023 12:52:06 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:106:15: error: variable ‘padre’ set but not used [-Werror=unused-but-set-variable]
  106 |     TreeNode *padre=node->parent;
      |               ^~~~~
cc1: all warnings being treated as errors
Compilation failed
7cc7297
Fri 21 Apr 2023 12:52:41 AM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:106:15: error: variable ‘padre’ set but not used [-Werror=unused-but-set-variable]
  106 |     TreeNode *padre=malloc(sizeof(TreeNode));
      |               ^~~~~
cc1: all warnings being treated as errors
Compilation failed
d86f1fc
Fri 21 Apr 2023 12:54:31 AM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  16|4
total_score: 30/70
c9fac37
Fri 21 Apr 2023 01:01:19 AM UTC: 
 treemap.c | 21 ++++++++++++++++-----
 1 file changed, 16 insertions(+), 5 deletions(-)
 tests:  16|4
total_score: 30/70
7e251e2
Fri 21 Apr 2023 01:05:57 AM UTC: 
 treemap.c | 18 ++++++++++++++----
 1 file changed, 14 insertions(+), 4 deletions(-)
 tests:  17|4
total_score: 35/70
ae1b3a5
Fri 21 Apr 2023 02:49:26 AM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
501e5bc
Fri 21 Apr 2023 02:50:16 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  18|3
total_score: 40/70
9fcf8d8
Fri 21 Apr 2023 02:53:09 AM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  20|2
total_score: 45/70
c6fffe0
Fri 21 Apr 2023 03:01:46 AM UTC: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  20|2
total_score: 45/70
1c68979
Fri 21 Apr 2023 03:02:16 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  23|2
total_score: 50/70
27880e8
Fri 21 Apr 2023 03:02:36 AM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  23|2
total_score: 50/70
e922bef
Fri 21 Apr 2023 03:03:58 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:201:5: error: suggest explicit braces to avoid ambiguous ‘else’ [-Werror=dangling-else]
  201 |   if(tree->current->left!=NULL && tree->current->right!=NULL)
      |     ^
treemap.c:210:1: error: control reaches end of non-void function [-Werror=return-type]
  210 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
bd604c0
Fri 21 Apr 2023 03:04:12 AM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  21|2
total_score: 50/70
6347662
Fri 21 Apr 2023 03:04:26 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  24|2
total_score: 55/70
a6ddfa7
Fri 21 Apr 2023 03:09:18 AM UTC: 
 treemap.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
 tests:  0|0
0be38d9
Fri 21 Apr 2023 03:10:55 AM UTC: 
 treemap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  22|2
total_score: 50/70
fac531a
Fri 21 Apr 2023 03:19:01 AM UTC: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:215:16: error: ‘max’ undeclared (first use in this function)
  215 |             if(max->right!=NULL) x=x->right;
      |                ^~~
treemap.c:215:16: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:217:17: error: expected expression before ‘)’ token
  217 |         if(max!=)
      |                 ^
treemap.c:217:11: error: suggest explicit braces to avoid ambiguous ‘else’ [-Werror=dangling-else]
  217 |         if(max!=)
      |           ^
cc1: all warnings being treated as errors
Compilation failed
f212253
Fri 21 Apr 2023 03:23:19 AM UTC: 
 treemap.c | 15 +++++++++------
 1 file changed, 9 insertions(+), 6 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:204:40: error: expected ‘;’ before ‘if’
  204 |     if(max->right!=NULL) max=max->right
      |                                        ^
      |                                        ;
  205 |     if(max->right==NULL) break;
      |     ~~                                  
Compilation failed
59dbc82
